<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vimbax_camera</name>
  <version>0.0.0</version>
  <description>Topic and Service definitions used by the vimbax_camera_node</description>
  <maintainer email="dennis.langenkamp@alliedvision.com">Dennis Langenkamp</maintainer>
  <maintainer email="karsten.hoepke@alliedvision.com">Karsten Höpke</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>vimbax_camera_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
