<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>vimbax_camera</name>
    <version>1.0.0</version>
    <description>ROS 2 node package for Vimba X cameras</description>
    <maintainer email="dennis.langenkamp@alliedvision.com">Dennis Langenkamp</maintainer>
    <maintainer email="karsten.hoepke@alliedvision.com">Karsten Höpke</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>image_transport</depend>
    <depend>camera_info_manager</depend>
    <depend>vimbax_camera_msgs</depend>
    <depend>vimbax_camera_events</depend>
    <depend>vmbc_interface</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_pytest</test_depend>
    <test_depend>launch_pytest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
